<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_pet"
        android:icon="@drawable/info"
        android:title="@string/title_pet" />

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/histogram"
        android:title="@string/title_diary" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/shop"
        android:title="@string/title_shop"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/cog"
        android:title="@string/title_settings" />

</menu>